--- a/app/src/main/res/layout/activity_js_gb.xml
+++ b/app/src/main/res/layout/activity_js_gb.xml
@@ -13,10 +13,9 @@
             android:id="@+id/title_bar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:center_tv="江苏骰宝"
-            app:left_iv="@mipmap/ic_launcher"
-            app:right_iv="@mipmap/ic_launcher" />
-
+            app:center_tv="江苏骰宝（快3）"
+            app:left_iv="@mipmap/left_jian"
+            app:right_iv="@mipmap/caidan_san" />
         <View
             android:layout_width="match_parent"
             android:layout_height="0.5dp"
@@ -147,17 +146,20 @@
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textSize="12dp"
                             android:text="已选" />
 
                         <TextView
                             android:id="@+id/zhu_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textColor="@color/yellow"
                             android:text="0" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
+                            android:textSize="12dp"
                             android:text="注" />
                     </LinearLayout>
 
@@ -174,24 +176,33 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
+                    android:padding="5dp"
                     android:orientation="horizontal">
 
                     <Button
                         android:id="@+id/left_btn"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:background="@color/huired"
+                        android:textColor="@color/white"
                         android:text="下注" />
 
                     <Button
                         android:id="@+id/center_btn"
+                        android:layout_marginLeft="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="A盘" />
+                        android:background="@color/colorPrimary"
+                        android:textColor="@color/white"
+                        android:text="A盘√" />
 
                     <Button
                         android:id="@+id/right_btn"
+                        android:layout_marginLeft="5dp"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:background="@color/huired"
+                        android:textColor="@color/white"
                         android:text="B盘" />
                 </LinearLayout>
             </LinearLayout>
