--- a/app/src/main/res/layout/activity_capital.xml
+++ b/app/src/main/res/layout/activity_capital.xml
@@ -11,17 +11,21 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:background="@color/white"
             android:orientation="vertical">
 
             <net.tsz.afinal.view.TitleBar
                 android:id="@+id/title_bar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/colorPrimary"
+                app:left_iv="@mipmap/left_jian"
                 app:center_tv="资金管理" />
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
+                android:background="@color/blue"
                 android:orientation="horizontal">
 
                 <ImageView
@@ -30,7 +34,7 @@
                     android:layout_height="80dp"
                     android:layout_gravity="center"
                     android:layout_marginLeft="50dp"
-                    android:src="@mipmap/ic_launcher" />
+                    android:src="@mipmap/avatar" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -41,37 +45,36 @@
 
                     <TextView
                         android:id="@+id/name_tv"
-                        style="@style/capial_item_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="123123" />
-
-                    <TextView
-                        style="@style/capial_item_tv"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginBottom="5dp"
-                        android:layout_marginTop="5dp"
                         android:text="123123" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginBottom="5dp"
+                        android:layout_marginTop="5dp"
                         android:gravity="center_vertical"
                         android:orientation="horizontal">
 
                         <TextView
-                            style="@style/capial_item_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="123123" />
+                            android:text="用户余额：" />
 
-                        <ImageView
-                            android:layout_width="20dp"
-                            android:layout_height="20dp"
-                            android:layout_marginLeft="10dp"
-                            android:src="@mipmap/ic_launcher" />
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textColor="@color/white"
+                            android:text="0000" />
                     </LinearLayout>
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="反水金额：0.00" />
+
+
                 </LinearLayout>
             </LinearLayout>
 
