--- a/app/src/main/res/layout/frag_deposit.xml
+++ b/app/src/main/res/layout/frag_deposit.xml
@@ -19,7 +19,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@mipmap/main" />
+                android:src="@mipmap/zfb_icon" />
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -58,7 +58,7 @@
             <ImageView
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-                android:src="@mipmap/main" />
+                android:src="@mipmap/wechat_icon" />
 
             <LinearLayout
                 android:layout_width="match_parent"
